in between the last dom project

--- a/31_DOM_projects/index.html
+++ b/31_DOM_projects/index.html
@@ -33,7 +33,7 @@
             <a href="2-BMI-calculator/index.html">project-1 color-changer</a>
         </div>
         <div class="p p3">
-            <a href="3-digital-clock/indec.html">project-1 color-changer</a>
+            <a href="3-digital-clock/index.html">project-1 color-changer</a>
         </div>
         <div class="p p4">
             <a href="4-guess-the-number/index.html">project-1 color-changer</a>
