--- a/00_practice.html
+++ b/00_practice.html
@@ -1,33 +1,24 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{       
+            background-color: black;
+            color: aliceblue;
+        }
+    </style>
 </head>
-<body style="background-color: #212121; color: antiquewhite;">
-    <div class="parent">
-        <div class="day">monday</div>
-        <div class="day">tuesday</div>
-        <div class="day">wednesday</div>
-        <div class="day">thursday</div>
-    </div>
+<body>
+    <ul class="language">
+        <li>javascript</li>
+    </ul>
 </body>
-<script>
-   const x= document.querySelector(".parent")
-   console.log(x);
-   console.log(x.children);
-   console.log(x.children[1]);
-   console.log(x.children[1].innerHTML);
-console.log("#################");
 
-   for(let i=0;i<x.children.length;i++){
-    console.log(x.children[i].innerHTML);
-    
-   }
-   x.children[1].style.color="orange"
-   
-   
-   
-</script>
 </html>
